GNOME Bugzilla – Bug 674324
The documentation of the function gupnp_didl_lite_object_get_parent_id is incorrect
Last modified: 2019-02-22 05:58:09 UTC
Created attachment 212287 [details] [review] Patch to update the documentation for gupnp_didl_lite_object_get_parent_id It suggests that the caller should dispose of the returned value when he no longer needs it by calling g_free. However, the caller should not do this. If he does his program will probably crash. Please find attached a patch to address the issue.
Review of attachment 212287 [details] [review]: Ok