Fixed documentation issue with gupnp_didl_lite_object_get_parent_id

The documentation instructed the caller to g_free the string returned
by this function, which he should not do.

https://bugzilla.gnome.org/show_bug.cgi?id=674324